human_written_tests/WebAssembly/processed_control_flow_validation/test_block_24.wast
(assert_invalid
  (module (func $type-value-empty-vs-f32 (result f32)
    (block (result f32))
  ))
  "type mismatch"
)